# aws-mailer

./: README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
cdk/: app.py  aws_emailer.py  stack.py
lambda/: emailer.py  pyproject.toml
lambda/mailer/: main.py
lambda/mailer/models/: models.py
lambda/mailer/utils/: parse_event.py  send_email.py
tests/unit/: test_model.py
