[tool.poetry]
name = "mailer"
version = "0.0.0"
description = ""
authors = ["David Enthoven <david.enthoven@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.145"
mypy-boto3-ses = "^1.34.141"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
